hphp/hack/test/typecheck/reactive/mutability_flavors6_2.php
<?hh // partial

class A {}

<<__Rx, __MutableReturn>>
function g(): A {
  return new A();
}

<<__Rx>>
function f(): void {
  // ERROR
  $a = g() ?? \HH\Rx\mutable(new A());
}
